--- a/docs/_includes/page__hero.html
+++ b/docs/_includes/page__hero.html
@@ -42,7 +42,12 @@
       {% if page.header.actions %}
         <p>
         {% for action in page.header.actions %}
-          <a href="{{ action.url | relative_url }}" class="btn btn--light-outline btn--large">{{ action.label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a>
+          <a
+            class="btn btn--large btn--{% if action.primary %}primary{% else %}light-outline{% endif %}"
+            href="{{ action.url | relative_url }}"
+          >
+            {{ action.label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}
+          </a>
         {% endfor %}
       {% endif %}
     </div>
