--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -35,7 +35,7 @@
      rel="nofollow">{{ site.name | default: site.title }}</a>.
   {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }}
   <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp;
-  <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/"
+  <a href="https://mmistakes.github.io/minimal-mistakes/"
      rel="nofollow">Minimal Mistakes</a>.
   Logo and illustrations from
   <a href="https://cocomaterial.com/" rel="nofollow">Coco Material</a>.
