--- a/docs/_includes/head/custom.html
+++ b/docs/_includes/head/custom.html
@@ -5,7 +5,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2">
 <link rel="manifest" href="/site.webmanifest?v=2">
-<link rel="mask-icon" href="/safari-pinned-tab.svg?v=2" color="#5bbad5">
+<link rel="mask-icon" href="/safari-pinned-tab.svg?v=2" color="#ff7518">
 <link rel="shortcut icon" href="/favicon.ico?v=2">
 <meta name="apple-mobile-web-app-title" content="Mafalda SFU">
 <meta name="application-name" content="Mafalda SFU">
