--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -9,8 +9,7 @@
     {% if link.label and link.url %}
     <li>
       <a href="{{ link.url }}" rel="nofollow noopener noreferrer">
-        <i class="{{ link.icon | default: 'fas fa-link' }}"
-           aria-hidden="true"></i>
+        <i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i>
         {{ link.label }}
       </a>
     </li>
